MINIO允許忽略憑證

--- a/.env.sample
+++ b/.env.sample
@@ -6,6 +6,7 @@ MINIO_ACCESS_KEY=
 MINIO_SECRET_KEY=
 MINIO_SECURE=FALSE
 MINIO_BUCKET=llm-graph-bucket
+MINIO_CERT_CERIFY=TRUE
 AZURE_OPENAI_ENDPOINT=https://sales-chatbot-llm.openai.azure.com/
 AZURE_OPENAI_DEPLOYMENT_NAME=GPT4o
 AZURE_OPENAI_API_VERSION=2024-02-01
