--- a/.env.sample
+++ b/.env.sample
@@ -16,3 +16,7 @@ RABBITMQ_QUEUE=llm_agent
 RABBITMQ_CHANNEL=llm_agent
 USER_UPLOAD_TMP_FOLDER=upload_files
 LOG_DIR=./logs
+DB_USERNAME=sa
+DB_PASSWORD=
+DB_SERVER=localhost
+DB_SCHEMA=ACP
