--- a/.env.sample
+++ b/.env.sample
@@ -14,6 +14,8 @@ AZURE_OPENAI_API_KEY=
 RABBITMQ_HOST=localhost
 RABBITMQ_QUEUE=llm_agent
 RABBITMQ_CHANNEL=llm_agent
+RABBITMQ_USER=user
+RABBITMQ_PASSWORD=user123
 USER_UPLOAD_TMP_FOLDER=upload_files
 LOG_DIR=./logs
 DB_USERNAME=sa
