--- a/.env.sample
+++ b/.env.sample
@@ -4,9 +4,9 @@ NEO4J_PASSWORD=
 MINIO_SERVER=localhost:9000
 MINIO_ACCESS_KEY=
 MINIO_SECRET_KEY=
-MINIO_SECURE=FALSE
+MINIO_SECURE=False
 MINIO_BUCKET=llm-graph-bucket
-MINIO_CERT_CERIFY=TRUE
+MINIO_CERT_VERIFY=True
 AZURE_OPENAI_ENDPOINT=https://sales-chatbot-llm.openai.azure.com/
 AZURE_OPENAI_DEPLOYMENT_NAME=GPT4o
 AZURE_OPENAI_API_VERSION=2024-02-01
@@ -15,8 +15,10 @@ RABBITMQ_HOST=localhost
 RABBITMQ_QUEUE=llm_agent
 RABBITMQ_CHANNEL=llm_agent
 RABBITMQ_USER=user
-RABBITMQ_PASSWORD=user123
+RABBITMQ_PASSWORD=
 RABBITMQ_PORT=5672
+RABBITMQ_SSL=True
+RABBITMQ_CERT_VERIFY=False
 USER_UPLOAD_TMP_FOLDER=upload_files
 LOG_DIR=./logs
 DB_USERNAME=sa
