修改參數範例更貼近DEV情形

--- a/.env.sample
+++ b/.env.sample
@@ -21,7 +21,7 @@ RABBITMQ_CHANNEL=llm_agent
 RABBITMQ_USER=user
 RABBITMQ_PASSWORD=
 RABBITMQ_PORT=5672
-RABBITMQ_SSL=True
+RABBITMQ_SSL=False
 RABBITMQ_CERT_VERIFY=False
 USER_UPLOAD_TMP_FOLDER=upload_files
 LOG_DIR=./logs
