調整開發預設值

--- a/.env.sample
+++ b/.env.sample
@@ -10,7 +10,7 @@ MINIO_ACCESS_KEY=
 MINIO_SECRET_KEY=
 MINIO_SECURE=False
 MINIO_BUCKET=llm-graph-bucket
-MINIO_CERT_VERIFY=True
+MINIO_CERT_VERIFY=False
 AZURE_OPENAI_ENDPOINT=https://sales-chatbot-llm.openai.azure.com/
 AZURE_OPENAI_DEPLOYMENT_NAME=GPT4o
 AZURE_OPENAI_API_VERSION=2024-02-01
