--- a/simulated_env/neo4j/docker-compose.yml
+++ b/simulated_env/neo4j/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - 7474:7474
       - 7687:7687
     environment:
+      - NEO4J_AUTH=neo4j/2wsx3edc
       - NEO4J_apoc_export_file_enabled=true
       - NEO4J_apoc_import_file_enabled=true
       - NEO4J_apoc_import_file_use__neo4j__config=true
