--- a/.env.sample
+++ b/.env.sample
@@ -12,7 +12,7 @@ MINIO_SECURE=False
 MINIO_BUCKET=llm-graph-bucket
 MINIO_CERT_VERIFY=False
 AZURE_OPENAI_ENDPOINT=https://sales-chatbot-llm.openai.azure.com/
-AZURE_OPENAI_DEPLOYMENT_NAME=GPT4o
+AZURE_OPENAI_DEPLOYMENT_NAME=gpt-4o-mini
 AZURE_OPENAI_API_VERSION=2024-02-01
 AZURE_OPENAI_API_KEY=
 RABBITMQ_HOST=localhost
@@ -23,5 +23,7 @@ RABBITMQ_PASSWORD=
 RABBITMQ_PORT=5672
 RABBITMQ_SSL=False
 RABBITMQ_CERT_VERIFY=False
+CHAT_AGENT_SSL_PRIVATE_KEY=./self-sign/private.key
+CHAT_AGENT_SSL_PUBLIC_KEY=./self-sign/public.crt
 USER_UPLOAD_TMP_FOLDER=upload_files
 LOG_DIR=./logs
