初步可於Mac運行的版本

--- a/danny_tnps/requirements.txt
+++ b/danny_tnps/requirements.txt
@@ -131,6 +131,7 @@ langgraph-checkpoint-sqlite==2.0.1
 langgraph-sdk==0.1.48
 langserve==0.3.0
 langsmith==0.2.4
+Levenshtein==0.27.1
 llvmlite==0.44.0
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
@@ -217,10 +218,12 @@ pyproject_hooks==1.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-json-logger==3.2.1
+python-Levenshtein==0.27.1
 python-ulid==3.0.0
 pytz==2024.2
 PyYAML==6.0.2
 pyzmq==26.2.0
+RapidFuzz==3.12.2
 redis==5.2.1
 redisvl==0.4.1
 referencing==0.35.1
